Fix spacing between menu and upvote buttons without messing up spacing in Oneechan (menu button moved).

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2089,3 +2089,6 @@ grunt.file.expand('src/Linkification/icons/*.png').map(function(file) {
 .upvote {
   margin: 0 4px;
 }
+.post .menu-button:not(:last-of-type) {
+  margin-right: -4px;
+}
